--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "blazy": "^1.8.2",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp-autoprefixer": "^7.0.1",
@@ -38,6 +39,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-watch": "^5.0.1",
+    "gulp-webp": "^4.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
     "jquery": "^3.4.1",
