--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
     "jquery": "^3.4.1",
+    "lightbox2": "^2.11.1",
     "normalize.css": "^8.0.1"
   }
 }
